# ProjectJJ2

./: .gitignore  CMakeLists.txt  README.md  all_results.txt  script.sh
.github/workflows/: cmake.yml
OtherStuff/: bkTree.cpp  bkTree.h
OtherStuff/ProjectJJ1/: .gitignore  CMakeLists.txt  README.md
OtherStuff/ProjectJJ1/documents/: document_1.txt  document_2.txt  document_4.txt  document_5.txt
OtherStuff/ProjectJJ1/queries/: query_2.txt  query_3.txt  query_4.txt  query_5.txt  query_6.txt  query_7.txt
OtherStuff/ProjectJJ1/src/: core.h  exact_matching_engine.cpp  exact_matching_engine.h  file_reader.cpp  file_reader.h  inverted_search_engine.cpp  inverted_search_engine.h  iterator.h  my_string.h  pair.h  unique_ptr.h  unordered_map.h  vector.h
OtherStuff/ProjectJJ1/src/bkTrees/: bkTree.cpp  bkTree.h
OtherStuff/ProjectJJ1/src/bkTrees/appMatching/: editDistance.cpp  editDistance.h  hammingDistance.cpp  hammingDistance.h
OtherStuff/ProjectJJ1/tests/: bkTrees-tests.cpp  editDistance-tests.cpp  exact_matching_engine-tests.cpp  file_reader_tests.cpp  tests-main.cpp  tests-unique_ptr.cpp  tests-vec.cpp  unordered_map-tests.cpp
OtherStuff/project/: .gitignore  README.md  acutest.h  main.cpp  makefile  queries.txt  test_runner.cpp  tiny_test.txt
build-release/: result.txt
dataviz/: index.html  main.js  package-lock.json  package.json
dataviz/src/: comparisonChart.js  data.js  index copy.html  lineChart.js  main.js
src/: BK_Entry.cpp  BK_Entry.h  BK_T.cpp  BK_T.h  array.h  cond_variable.cpp  cond_variable.h  core.cpp  editDistance.cpp  editDistance.h  entry.h  forward_list.h  hash_function.cpp  hash_function.h  implementation.cpp  implementation.h  iterator.h  job.cpp  job.h  job_manager.cpp  job_manager.h  list.h  list_T.cpp  main.cpp  main_test.cpp  mutex.cpp  mutex.h  my_string.cpp  my_string.h  pair.h  query.cpp  query.h  stringBreaker.cpp  stringBreaker.h  string_breaker.cpp  string_breaker.h  test_through.cpp  thread.cpp  thread.h  unique_ptr.h  (+4 more)
src/appMatching/: editDistance.cpp  editDistance.h  (+2 more)
test_data/: temp.txt  temp2.txt  test1.txt
tests/: array_tests.cpp  bk_entry_tests.cpp  bk_tests.cpp  distance_tests.cpp  editDistance-tests.cpp  edit_tests.cpp  forward_lists-tests.cpp  hammingDistance-tests.cpp  impementation_tests.cpp  implementation-edit-distance-tests.cpp  implementation-exact-matching-tests.cpp  implementation-hamming-distance-tests.cpp  list_tests.cpp  query_tests.cpp  string_breaker_tests.cpp  string_tests.cpp  tests-edit.cpp  tests-unique_ptr.cpp  tests-vec.cpp  unordered_map-tests.cpp  unordered_set-tests.cpp
(+21 files in other folders)
